# quark-rustidler

./: Cargo.toml  README.md  crowdin.yml
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: build.yml  cargo_audit.yml  clippy_check.yml
cfg/: default.toml  settings.toml
locale/: en-PT.ftl  en-US.ftl  ko-KR.ftl  nl-NL.ftl  pt-BR.ftl
res/ascii/logos/: 0.txt  1.txt  2.txt  3.txt  logo.txt
src/: config.rs  constants.rs  event.rs  game.rs  localize.rs  logging.rs  main.rs  resources.rs  util.rs
src/screens/: main_menu.rs  mod.rs  saves.rs  welcome.rs
