[package]
name = "quark-rustidler"
version = "0.1.0"
authors = ["Vinícius Weigert Aquila <vinicius.weigert.aquila42@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
rand = "0.8.3"
soloud = "0.3.0"
config = "0.10.1"
fluent = "0.15.0"
app_dirs = "1.2.1"
simplelog = "0.9.0"
crossterm = "0.19.0"
tui = { version = "0.14.0", features = ["crossterm"] }
unic-langid = { version = "0.9.0", features = ["macros"] }
